# nicechat

./: .envrc.example  .flake8  .gitignore  README.md  pyproject.toml
src/nicechat/: __init__.py  app.py  llm.py  markdown_ext.py  test_llm.py
