[project]
name = "nicechat"
version = "0.1.0"
description = "A nice chat application"
authors = [
    {name = "Your Name", email = "your@email.com"},
]
dependencies = [
    "nicegui>=1.4.0",
    "openai>=1.0.0"
]
requires-python = ">=3.8"
readme = "README.md"

[project.scripts]
nicechat = "nicechat.app:main"
nicechat-test-llm = "nicechat.test_llm:main"

[build-system]
requires = ["uv_build>=0.1.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
]
