[project]
name = "nicechat"
version = "0.1.1"
description = "An llm chat gui"
repository = "https://github.com/yihuang/nicechat"
authors = [
    {name = "HuangYi", email = "yi.codeplayer@gmail.com"},
]
dependencies = [
    "nicegui@git+https://github.com/zauberzeug/nicegui.git@main",
    "openai>=1.12.0",
    "anthropic>=0.25.0",
    "latex2mathml>=3.74.0",
    "markdown2>=2.4.10",
    "pywebview>=5.4",
    "litellm>=1.67.2",
]
requires-python = ">=3.8"
readme = "README.md"

[project.scripts]
nicechat = "nicechat.app:main"
nicechat-test-llm = "nicechat.test_llm:main"

[build-system]
requires = ["uv_build>=0.1.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "flake8>=5.0.4",
]
test = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
]
